[tool.poetry]
name = "fasthtml-epub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.4.4"
ebooklib = "^0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
